--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "feedparser": "^1.1.5",
     "opmlparser": "^0.8.0",
     "request": "^2.79.0",
+    "rss": "^1.2.1",
     "string-hash-colour": "0.0.2"
   },
   "devDependencies": {},
