--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "opmlparser": "^0.8.0",
     "request": "^2.79.0",
     "rss": "^1.2.1",
-    "string-hash-colour": "0.0.2"
+    "string-hash-colour": "0.0.2",
+    "striptags": "^2.1.1",
+    "truncate": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
